--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -5,7 +5,7 @@ import { Icon } from 'astro-icon/components'
 
 <section class="container flex flex-col gap-[1rem] md:flex-row">
     <div class="grow-[1] p-[1rem]">
-        <img class="rounded-full w-[40rem] m-auto" src="/public/profile-picture.png" alt="Rey Eduardo Halsall Quintero">
+        <img class="rounded-full w-[40rem] m-auto" src="/portfolio/profile-picture.png" alt="Rey Eduardo Halsall Quintero">
     </div>
     <div class="grow-[2] w-[100%] flex flex-col justify-center">
         <h3 class="text-primary text-[1.5rem] font-bold">Backend developer</h3>
@@ -16,8 +16,8 @@ import { Icon } from 'astro-icon/components'
             <button class="border-primary border-[1px] py-[.5rem] px-[1.5rem] rounded-[.5rem] ml-[.5rem] text-primary">Contact Info</button>
         </div>
         <div class="flex gap-[.5rem] mt-[.5rem]">
-            <a href="https://github.com/reduhq"><Icon name="mdi:github" size={25}/></a>
-            <a href="https://www.linkedin.com/in/rey-halsall/"><Icon name="mdi:linkedin" size={25}/></a>
+            <a target="_blank" href="https://github.com/reduhq"><Icon name="mdi:github" size={25}/></a>
+            <a target="_blank" href="https://www.linkedin.com/in/rey-halsall/"><Icon name="mdi:linkedin" size={25}/></a>
         </div>
     </div>
 </section>
