--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Presentation from '../components/Presentation.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<Header />
 		<Presentation/>
+		<Projects/>
 	</main>
 </Layout>
 
