--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -8,19 +8,27 @@ interface Props{
     githubFrontend?:string
     githubBackend?:string
     url?:string
+    tags:Array<{name:string, class:string, icon:any}>
 }
-const {image, title, description, githubFrontend, githubBackend, url} = Astro.props
+const {image, title, description, githubFrontend, githubBackend, url, tags} = Astro.props
 ---
 
-<article class=" rounded-[1rem] bg-[#0d1117]">
+<article class=" rounded-[1rem] bg-[#0d1117] border border-[#30363d]">
     <img class="rounded-t-[1rem]" src={image} alt={title}>
     <div class="p-[1rem]">
         <h2 class="font-bold text-primary">{title}</h2>
         <p>{description}</p>
         <div class="flex flex-wrap gap-[.5rem] mt-[1rem]">
-            {githubFrontend&&<a href={githubFrontend} target="_blank" class="flex gap-[.5rem] items-center border border-primary px-[1.5rem] py-[.5rem] rounded-[.5rem]"><Icon name="mdi:github" size={25}/> Frontend</a>}
-            {githubBackend&&<a href={githubBackend} target="_blank" class="flex gap-[.5rem] items-center border border-primary px-[1.5rem] py-[.5rem] rounded-[.5rem]"><Icon name="mdi:github" size={25}/> Backend</a>}
-            {url&&<a href={url} target="_blank" class="flex gap-[.5rem] items-center border border-primary px-[1.5rem] py-[.5rem] rounded-[.5rem]"><Icon name="mdi:link-variant" size={25}/> URL</a>}
+            {githubFrontend&&<a href={githubFrontend} target="_blank" class="flex gap-[.5rem] items-center bg-[#161b22] hover:bg-[#21262d] border border-[#30363d] px-[1rem] py-[.5rem] rounded-[.5rem]"><Icon name="mdi:github" size={25}/> Frontend</a>}
+            {githubBackend&&<a href={githubBackend} target="_blank" class="flex gap-[.5rem] items-center bg-[#161b22] hover:bg-[#21262d] border border-[#30363d] px-[1rem] py-[.5rem] rounded-[.5rem]"><Icon name="mdi:github" size={25}/> Backend</a>}
+            {url&&<a href={url} target="_blank" class="flex gap-[.5rem] items-center bg-[#161b22] hover:bg-[#21262d] border border-[#30363d] px-[1rem] py-[.5rem] rounded-[.5rem]"><Icon name="mdi:link-variant" size={25}/> URL</a>}
+        </div>
+        <div class="mt-[2rem]">
+            <ul class="flex flex-wrap gap-[.5rem]">
+                {tags.map(tag =>(
+                    <li class={`flex items-center gap-[.5rem] rounded-[1rem] px-[1rem] ${tag.class}`}><tag.icon class={`size-[1rem]`}/> {tag.name}</li>
+                ))}
+            </ul>
         </div>
     </div>
 </article>
