--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,72 +1,72 @@
 ---
 import ProjectCard from '../components/ProjectCard.astro';
-import NextJS from '../icons/NextJS.astro';
-import React from '../icons/React.astro'
-import ExpressJS from '../icons/ExpressJS.astro'
-import Typescript from '../icons/Typescript.astro'
-import Prisma from '../icons/Prisma.astro'
-import PostgreSQL from '../icons/PostgreSQL.astro'
-import FastAPI from '../icons/FastAPI.astro'
-import Python from '../icons/Python.astro'
-import SQLAlchemy from '../icons/SQLAlchemy.astro'
-import Docker from '../icons/Docker.astro'
-import JWT from '../icons/JWT.astro'
+import NextJS from '../icons/NextJS.svg';
+import React from '../icons/React.svg'
+import ExpressJS from '../icons/ExpressJS.svg'
+import Typescript from '../icons/Typescript.svg'
+import Prisma from '../icons/Prisma.svg'
+import PostgreSQL from '../icons/PostgreSQL.svg'
+import FastAPI from '../icons/FastAPI.svg'
+import Python from '../icons/Python.svg'
+import SQLAlchemy from '../icons/SQLAlchemy.svg'
+import Docker from '../icons/Docker.svg'
+import JWT from '../icons/JWT.svg'
 
 const TAGS = {
     NEXT:{
         name:"Next.js",
         class:"bg-[#000] text-[#fff]",
-        icon:NextJS
+        icon:"NextJS"
     },
     REACT:{
         name:"React",
         class:"bg-[#23272f] text-[#fff]",
-        icon:React
+        icon:'React'
     },
     EXPRESS:{
         name:"Express.js",
         class:"bg-[#000] text-[#fff]",
-        icon:ExpressJS
+        icon:'ExpressJS'
     },
     TYPESCRIPT:{
         name:"TypeScript",
         class:"bg-[#235a9799] text-[#fff]",
-        icon:Typescript
+        icon:'Typescript'
     },
     PRISMA:{
         name:"Prisma",
         class:"bg-[#000] text-[#fff]",
-        icon:Prisma
+        icon:'Prisma'
     },
     POSTGRE:{
         name:"PostgreSQL",
         class:"bg-[#31619299] text-[#fff]",
-        icon:PostgreSQL
+        icon:'PostgreSQL'
     },
     FASTAPI:{
         name:"FastAPI",
         class:"bg-[#006e6366] text-[#fff]",
-        icon:FastAPI
+        icon:'FastAPI'
     },
     PYTHON:{
         name:"Python",
         class:"bg-[#193449] text-[#fff]",
-        icon:Python
+        icon:'Python'
     },
     SQLALCHEMY:{
         name:"SQLAlchemy",
         class:"bg-[#222] text-[#fff]",
-        icon:SQLAlchemy
+        icon:'SQLAlchemy'
     },
     DOCKER:{
         name:"Docker",
         class:"bg-[#2ca5e044] text-[#fff]",
-        icon:Docker
+        icon:'Docker'
     },
     JWT:{
         name:"JWT",
         class:"bg-[#d63aff66] text-[#fff]",
-        icon:JWT
+        icon:'JWT'
     }
 }
 ---
@@ -92,3 +92,4 @@ const TAGS = {
         />
     </section>
 </section>
+
