--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Presentation from '../components/Presentation.astro';
 import Projects from '../components/Projects.astro';
+import Skills from '../components/Skills.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -10,6 +11,7 @@ import Projects from '../components/Projects.astro';
 		<Header />
 		<Presentation/>
 		<Projects/>
+		<Skills/>
 	</main>
 </Layout>
 
