--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,11 @@ const { title } = Astro.props;
 		font-family: 'Inter Variable', sans-serif;
 		background: #000;
 		color: #fff;
-		background-size: 224px;
+		background-size: 224px;		
+		scrollbar-color: #fff5 #fff1;
+		scrollbar-width: thin;
+	}
+	body{
 	}
 	code {
 		font-family:
