--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -15,7 +15,7 @@ const TAGS:{[section:string]:{[tag:string]:{name:string, icon:string, class:stri
                 Object.keys(TAGS).map(section =>(
                     <div class="mb-[.5rem] flex flex-col md:flex-row items-center gap-[.5rem]">
                         <h2 class="lowercase w-[7rem] text-[1rem] text-center text-[#fff9]">{section}</h2>
-                        <ul class="flex flex-wrap gap-[.5rem] justify-center md:justify-start">
+                        <ul class="flex flex-wrap gap-[.5rem] justify-center md:justify-normal">
                             {
                                 Object.keys(TAGS[section]).map(item =>(
                                     <li class="bg-[#0d1117] h-[7rem] w-[7rem] rounded-[.5rem] flex">
@@ -29,15 +29,6 @@ const TAGS:{[section:string]:{[tag:string]:{name:string, icon:string, class:stri
                     </div>
                 ))
             }
-            <!-- <ul class="flex flex-wrap gap-[1rem] justify-center">
-                {Object.keys(TAGS).map(tag =>(
-                    <li class="bg-[#0d1117] h-[7rem] w-[7rem] rounded-[.5rem] flex">
-                        <div class="select-none z-10 h-full w-full flex flex-col justify-center items-center gap-[.5rem] text-[.5rem]">
-                            <Icon name={`${TAGS[`${tag}`].icon}`} size={50}/> {TAGS[tag].name}
-                        </div>
-                    </li>
-                ))}
-            </ul> -->
         </div>
     </div>
 </section>
