Starting the certificates section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Presentation from '../components/Presentation.astro';
 import Projects from '../components/Projects.astro';
 import Skills from '../components/Skills.astro';
+import Certificates from '../components/Certificates.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -12,6 +13,7 @@ import Skills from '../components/Skills.astro';
 		<Presentation/>
 		<Projects/>
 		<Skills/>
+		<Certificates/>
 	</main>
 </Layout>
 
