--- a/src/components/Certificates.astro
+++ b/src/components/Certificates.astro
@@ -1,28 +1,39 @@
+---
+import 'photoswipe/style.css';
+---
 
 <section class="mt-[6rem]">
     <div class="container">
         <h2 class="text-[1.5rem] text-center mb-[1rem]">Certificates</h2>
         <div class="flex flex-col md:flex-row gap-[1rem]">
             <div class="flex-grow-[1] flex flex-col justify-center gap-[1rem]">
-                <article data-image="/portfolio/feria_ciencia_tecnologia.jpg" class="certificate-item p-[.5rem] border border-[#0d1117] rounded-[.5rem]">
+                <article data-image="/portfolio/feria_ciencia_tecnologia.jpg" class="certificate-item p-[.5rem] border border-[#30363d] rounded-[.5rem]">
                     <h3 class="uppercase font-bold mb-[.5rem] text-primary">Certificado 1er Lugar</h3>
                     <p class="text-[#fffb]">Feria ciencia y tecnología</p>
                     <time class="text-[#fffb]" datetime="2022">2022</time>
                 </article>
-                <article data-image="/portfolio/hackathon_nicaragua.jpg" class="certificate-item p-[.5rem] border border-[#0d1117] rounded-[.5rem]">
+                <article data-image="/portfolio/hackathon_nicaragua.jpg" class="certificate-item p-[.5rem] border border-[#30363d] rounded-[.5rem]">
                     <h3 class="uppercase font-bold mb-[.5rem] text-primary">Certificado participación</h3>
                     <p class="text-[#fffb]">Hackathon Nicaragua</p>
                     <time class="text-[#fffb]" datetime="2023">2023</time>
                 </article>
-                <article data-image="/portfolio/certificado_cs50.jpg" class="certificate-item is-active p-[.5rem] border border-[#0d1117] rounded-[.5rem]">
+                <article data-image="/portfolio/certificado_cs50.jpg" class="certificate-item is-active p-[.5rem] border border-[#30363d] rounded-[.5rem]">
                     <h3 class="uppercase font-bold mb-[.5rem] text-primary">Certificado CS50</h3>
                     <p class="text-[#fffb]">Curso CS50 - Universidad de Harvard</p>
                     <time class="text-[#fffb]" datetime="2024">2024</time>
                 </article>
             </div>
             <div class="flex-grow-[1] bg-[#0d1117] rounded-[.5rem] p-[1rem]">
-                <div class="max-w-[25rem] m-auto">
-                    <img class="certificate-img" src="/portfolio/certificado_cs50.jpg" alt="Certificado CS50">
+                <div id="gallery" class="max-w-[25rem] m-auto">
+                    <a 
+                    class="certificate" 
+                    href="/portfolio/certificado_cs50.jpg"
+                    data-pswp-width="800" 
+                    data-pswp-height="600" 
+                    target="_blank"
+                    >
+                        <img class="certificate-img" src="/portfolio/certificado_cs50.jpg" alt="Certificado CS50">
+                    </a>
                 </div>
             </div>
         </div>
@@ -31,15 +42,27 @@
 
 <script>
     const arts = document.getElementsByClassName('certificate-item')
+    const certificate = document.getElementsByClassName('certificate')[0] as HTMLAnchorElement
     const image = document.getElementsByClassName('certificate-img')[0] as HTMLImageElement
 
     Array.from(arts).forEach(art =>{
         art.addEventListener('mouseenter', ()=>{
             Array.from(arts).forEach(artItem => artItem.classList.remove('is-active'))
             art.classList.add('is-active')
+            certificate.href = art.getAttribute('data-image') as string
             image.src = art.getAttribute('data-image') as string
         })
     })
+
+    // PHOTOSWIPE
+    import PhotoSwipeLightbox from 'photoswipe/lightbox';
+
+    const lightbox = new PhotoSwipeLightbox({
+    gallery: '#gallery',
+    children: 'a',
+    pswpModule: () => import('photoswipe')
+    });
+    lightbox.init();
 </script>
 
 <style>
