--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Presentation from '../components/Presentation.astro';
 import Projects from '../components/Projects.astro';
 import Skills from '../components/Skills.astro';
 import Certificates from '../components/Certificates.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,6 +15,7 @@ import Certificates from '../components/Certificates.astro';
 		<Projects/>
 		<Skills/>
 		<Certificates/>
+		<Contact/>
 	</main>
 </Layout>
 
