--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -16,9 +16,9 @@ import { Icon } from 'astro-icon/components'
                 <button class="btn-cv bg-primary text-[#000] py-[.5rem] px-[1.5rem] rounded-[.5rem]">Download CV</button>
                 <button class="btn-contact border-primary border-[1px] py-[.5rem] px-[1.5rem] rounded-[.5rem] ml-[.5rem] text-primary">Contact Info</button>
             </div>
-            <div class="flex gap-[.5rem] mt-[.5rem]">
-                <a target="_blank" href="https://github.com/reduhq"><Icon name="mdi:github" size={25}/></a>
-                <a target="_blank" href="https://www.linkedin.com/in/rey-halsall/"><Icon name="mdi:linkedin" size={25}/></a>
+            <div class="flex gap-[1rem] mt-[.5rem]">
+                <a target="_blank" href="https://github.com/reduhq"><Icon name="mdi:github" size={30}/></a>
+                <a target="_blank" href="https://www.linkedin.com/in/rey-halsall/"><Icon name="mdi:linkedin" size={30}/></a>
             </div>
         </div>
     </div>
