--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Projects from '../components/Projects.astro';
 import Skills from '../components/Skills.astro';
 import Certificates from '../components/Certificates.astro';
 import Contact from '../components/Contact.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -16,6 +17,7 @@ import Contact from '../components/Contact.astro';
 		<Skills/>
 		<Certificates/>
 		<Contact/>
+		<Footer/>
 	</main>
 </Layout>
 
