--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,27 +1,30 @@
 ---
 import { Icon } from "astro-icon/components";
 
+import { getI18N } from '../i18n';
+const {currentLocale} = Astro
+const i18n = getI18N({currentLocale})
 ---
 <section class="mt-[6rem]">
     <div class="container">
-        <h2 class="text-[1.5rem] text-center mb-[.5rem]">Get in touch</h2>
+        <h2 class="text-[1.5rem] text-center mb-[.5rem]">{i18n.CONTACT_TITLE}</h2>
         <div class="flex gap-[1rem] flex-col md:flex-row">
             <div class="w-full">
-                <p class="mb-[1rem] font-light">Siempre estoy abierto a nuevas <span>oportunidades</span>. Si te gustaría <span>colaborar</span>, no dudes en <span>contactarme</span>.</p>
+                <p class="mb-[1rem] font-light" set:html={i18n.CONTACT_DESCRIPTION}></p>
                 <form action="">
                     <div>
-                        <label for="name">Name</label>
-                        <input type="text" placeholder="Your name">
+                        <label for="name">{i18n.CONTACT_NAME}</label>
+                        <input type="text" placeholder={i18n.CONTACT_NAME_PLACEHOLDER}>
                     </div>
                     <div>
                         <label for="email">Email</label>
-                        <input type="email" placeholder="Your email">
+                        <input type="email" placeholder={i18n.CONTACT_EMAIL_PLACEHOLDER}>
                     </div>
                     <div>
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" style="height:10rem" placeholder="Your message"></textarea>
+                        <label for="message">{i18n.CONTACT_MESSAGE}</label>
+                        <textarea name="message" id="message" style="height:10rem" placeholder={i18n.CONTACT_MESSAGE_PLACEHOLDER}></textarea>
                     </div>
-                    <button class="bg-primary rounded-[.5rem] py-[.5rem] text-[#000]" type="submit">Send</button>
+                    <button class="bg-primary rounded-[.5rem] py-[.5rem] text-[#000]" type="submit">{i18n.CONTACT_BTN_SEND}</button>
                 </form>
             </div>
             <div class="flex justify-center items-center w-full">
