--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,6 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Presentation from '../components/Presentation.astro';
-import Projects from '../components/Projects.astro';
-import Skills from '../components/Skills.astro';
-import Certificates from '../components/Certificates.astro';
-import Contact from '../components/Contact.astro';
-import Footer from '../components/Footer.astro';
+import App from "../components/App.astro";
+
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<Header />
-		<Presentation/>
-		<Projects/>
-		<Skills/>
-		<Certificates/>
-		<Contact/>
-		<Footer/>
-	</main>
-</Layout>
-
-<style>
-</style>
+<App/>
