--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -1,12 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Presentation from '../components/Presentation.astro';
-import Projects from '../components/Projects.astro';
-import Skills from '../components/Skills.astro';
-import Certificates from '../components/Certificates.astro';
-import Contact from '../components/Contact.astro';
-import Footer from '../components/Footer.astro';
+import Header from './Header.astro';
+import Presentation from './Presentation.astro';
+import Projects from './Projects.astro';
+import Skills from './Skills.astro';
+import Certificates from './Certificates.astro';
+import Contact from './Contact.astro';
+import Footer from './Footer.astro';
+import Navbar from './Navbar.astro'
 
 import { getI18N } from '../i18n';
 const {currentLocale} = Astro
@@ -22,6 +23,7 @@ const i18n = getI18N({currentLocale})
 		<Certificates/>
 		<Contact/>
 		<Footer/>
+		<Navbar/>
 	</main>
 </Layout>
 
